--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -69,7 +69,7 @@
               <span class="fw-bold mr-10 va-middle hide-mobile"></span>
 
               <button (click)="likeCar()" *ngIf="!hasLiked" class="btn btn-primary">LIKE</button>
-              <span *ngIf="hasLiked">You have already liked this car!</span>
+              <span *ngIf="hasLiked" style="font-weight: bolder; color: brown;">You have already liked this car!</span>
             </p>
 
             <p class="mb-0" *ngIf="isOwner">
